--- a/index.css
+++ b/index.css
@@ -8,3 +8,9 @@ body {
 	margin: 0px auto;
 	text-align: center;
 }
+.main {
+	padding: 10px;
+	margin: 0px auto;
+	background: black;
+	color: white;
+}
